[gd_scene load_steps=21 format=3 uid="uid://beiya5qlnu5b1"]

[ext_resource type="Texture2D" uid="uid://bh2t2rx2n6cju" path="res://assets/test/buttons/paid_currency.PNG" id="1_cayo1"]
[ext_resource type="Script" path="res://scripts/item_box.gd" id="1_pxvih"]
[ext_resource type="Texture2D" uid="uid://c66s472lp85r5" path="res://assets/test/buttons/free_currency.PNG" id="2_u52sd"]
[ext_resource type="Texture2D" uid="uid://ca3gvbqrwq6d2" path="res://assets/test/buttons/energy.PNG" id="3_0iudx"]
[ext_resource type="Script" path="res://scripts/itemButton.gd" id="3_qhesl"]
[ext_resource type="Texture2D" uid="uid://dao8wvdo45gbn" path="res://assets/test/buttons/gatcha.PNG" id="4_8lrck"]
[ext_resource type="Texture2D" uid="uid://db11qn4xaerdg" path="res://assets/test/buttons/shop.PNG" id="5_s8vla"]
[ext_resource type="Texture2D" uid="uid://cruumc2s2a01h" path="res://assets/test/buttons/shop_ad.PNG" id="6_ai0k8"]
[ext_resource type="Texture2D" uid="uid://nyclrqrtp5uk" path="res://assets/test/buttons/pig.PNG" id="7_8gqs2"]
[ext_resource type="Texture2D" uid="uid://1oe3j6d6o8fa" path="res://assets/test/buttons/achievements.PNG" id="8_2aoj0"]
[ext_resource type="Texture2D" uid="uid://c06vh8ephayp8" path="res://assets/test/buttons/Login.PNG" id="9_kignl"]
[ext_resource type="Texture2D" uid="uid://cw0bkrdg58w0h" path="res://assets/test/buttons/Dailies.PNG" id="10_74npk"]
[ext_resource type="Texture2D" uid="uid://fmb5cad1gj4q" path="res://assets/test/buttons/battle_pass.PNG" id="11_10d6b"]
[ext_resource type="Texture2D" uid="uid://bpkr8li3tsc4b" path="res://assets/test/buttons/online.PNG" id="12_m8vy5"]
[ext_resource type="Texture2D" uid="uid://dtlc6twu4wnfx" path="res://assets/test/buttons/special_offer.PNG" id="13_bms2s"]
[ext_resource type="Texture2D" uid="uid://bk871tjsymftl" path="res://assets/test/buttons/edit_animal_skin.PNG" id="14_eiu0n"]
[ext_resource type="Texture2D" uid="uid://c175iktgwbdeb" path="res://assets/test/buttons/collection.PNG" id="15_holpe"]
[ext_resource type="Texture2D" uid="uid://c10cghxj3uynl" path="res://assets/test/buttons/plus.png" id="18_oe84w"]
[ext_resource type="Texture2D" uid="uid://bct4vm5cjchie" path="res://assets/IMG_6393.PNG" id="18_tsgju"]
[ext_resource type="FontFile" uid="uid://b4jlqjq86n648" path="res://assets/digistrip.ttf" id="19_81xum"]

[node name="item_box" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pxvih")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 127.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
layout_mode = 2
color = Color(0.834131, 0.617175, 0.690259, 1)

[node name="ColorRect" type="ColorRect" parent="MarginContainer/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -264.0
offset_top = -358.5
offset_right = 249.0
offset_bottom = 190.5
grow_horizontal = 2
grow_vertical = 2
color = Color(0.930804, 0.82427, 0.857724, 1)

[node name="ColorRect" type="ColorRect" parent="MarginContainer/ColorRect/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -429.5
offset_top = -334.5
offset_right = 426.5
offset_bottom = -322.5
grow_horizontal = 2
grow_vertical = 2
color = Color(0.682353, 0.443137, 0.529412, 1)

[node name="Control" type="Control" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="paidCurrency" type="TextureButton" parent="MarginContainer/Control"]
layout_mode = 0
offset_left = -116.0
offset_top = -242.0
offset_right = 41.0
offset_bottom = -172.0
texture_normal = ExtResource("1_cayo1")
ignore_texture_size = true
stretch_mode = 4
script = ExtResource("3_qhesl")

[node name="freeCurrency" type="TextureButton" parent="MarginContainer/Control"]
layout_mode = 0
offset_left = -119.0
offset_top = -306.0
offset_right = -11.0
offset_bottom = -249.0
texture_normal = ExtResource("2_u52sd")
ignore_texture_size = true
stretch_mode = 4
script = ExtResource("3_qhesl")

[node name="energy" type="TextureButton" parent="MarginContainer/Control"]
layout_mode = 0
offset_left = -118.0
offset_top = -181.0
offset_right = 23.0
offset_bottom = -115.0
texture_normal = ExtResource("3_0iudx")
ignore_texture_size = true
stretch_mode = 4
script = ExtResource("3_qhesl")

[node name="gatcha" type="TextureButton" parent="MarginContainer/Control"]
layout_mode = 0
offset_left = -138.0
offset_top = -97.0
offset_right = 48.0
offset_bottom = 18.0
texture_normal = ExtResource("4_8lrck")
ignore_texture_size = true
stretch_mode = 4
script = ExtResource("3_qhesl")

[node name="shop" type="TextureButton" parent="MarginContainer/Control" groups=["itemboxbutton"]]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 18.0
offset_top = 20.0
offset_right = 235.0
offset_bottom = 182.0
grow_horizontal = 0
grow_vertical = 0
texture_normal = ExtResource("5_s8vla")
ignore_texture_size = true
stretch_mode = 4
script = ExtResource("3_qhesl")

[node name="gatchaAd" type="TextureButton" parent="MarginContainer/Control"]
layout_mode = 0
offset_left = 58.0
offset_top = -125.0
offset_right = 231.0
offset_bottom = 31.0
texture_normal = ExtResource("6_ai0k8")
ignore_texture_size = true
stretch_mode = 4
script = ExtResource("3_qhesl")

[node name="pig" type="TextureButton" parent="MarginContainer/Control"]
layout_mode = 0
offset_left = 128.0
offset_top = -236.0
offset_right = 237.0
offset_bottom = -105.0
texture_normal = ExtResource("7_8gqs2")
ignore_texture_size = true
stretch_mode = 4
script = ExtResource("3_qhesl")

[node name="achievements" type="TextureButton" parent="MarginContainer/Control"]
layout_mode = 0
offset_left = 28.0
offset_top = -221.0
offset_right = 141.0
offset_bottom = -130.0
texture_normal = ExtResource("8_2aoj0")
ignore_texture_size = true
stretch_mode = 4
script = ExtResource("3_qhesl")

[node name="login" type="TextureButton" parent="MarginContainer/Control"]
layout_mode = 0
offset_left = 129.0
offset_top = -337.0
offset_right = 232.0
offset_bottom = -244.0
texture_normal = ExtResource("9_kignl")
ignore_texture_size = true
stretch_mode = 4
script = ExtResource("3_qhesl")

[node name="dailies" type="TextureButton" parent="MarginContainer/Control"]
layout_mode = 0
offset_left = -137.0
offset_top = 32.0
offset_right = 15.0
offset_bottom = 168.0
texture_normal = ExtResource("10_74npk")
ignore_texture_size = true
stretch_mode = 4
script = ExtResource("3_qhesl")

[node name="battlePass" type="TextureButton" parent="MarginContainer/Control"]
layout_mode = 0
offset_left = -252.0
offset_top = -231.0
offset_right = -122.0
offset_bottom = -88.0
texture_normal = ExtResource("11_10d6b")
ignore_texture_size = true
stretch_mode = 4
script = ExtResource("3_qhesl")

[node name="onlineLeaderboard" type="TextureButton" parent="MarginContainer/Control"]
layout_mode = 0
offset_left = -253.0
offset_top = -348.0
offset_right = -134.0
offset_bottom = -236.0
texture_normal = ExtResource("12_m8vy5")
ignore_texture_size = true
stretch_mode = 4
script = ExtResource("3_qhesl")

[node name="specialOffer" type="TextureButton" parent="MarginContainer/Control"]
layout_mode = 0
offset_left = 19.0
offset_top = -337.0
offset_right = 131.0
offset_bottom = -216.0
texture_normal = ExtResource("13_bms2s")
ignore_texture_size = true
stretch_mode = 4
script = ExtResource("3_qhesl")

[node name="skinCollection" type="TextureButton" parent="MarginContainer/Control"]
layout_mode = 0
offset_left = -246.0
offset_top = 21.0
offset_right = -120.0
offset_bottom = 164.0
texture_normal = ExtResource("14_eiu0n")
ignore_texture_size = true
stretch_mode = 4
script = ExtResource("3_qhesl")

[node name="catCollection" type="TextureButton" parent="MarginContainer/Control"]
layout_mode = 0
offset_left = -237.0
offset_top = -52.0
offset_right = -160.0
offset_bottom = 21.0
texture_normal = ExtResource("15_holpe")
ignore_texture_size = true
stretch_mode = 4
script = ExtResource("3_qhesl")

[node name="description_box" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 755.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer2" type="MarginContainer" parent="description_box"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -206.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 0

[node name="ColorRect" type="ColorRect" parent="description_box/MarginContainer2"]
layout_mode = 2
color = Color(0.483549, 0.272595, 0.351127, 1)

[node name="TextureRect" type="TextureRect" parent="description_box/MarginContainer2"]
visible = false
layout_mode = 2
texture = ExtResource("18_tsgju")
expand_mode = 1

[node name="ScrollContainer" type="ScrollContainer" parent="description_box/MarginContainer2"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="description_box/MarginContainer2/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="Label" type="Label" parent="description_box/MarginContainer2/ScrollContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(0.811481, 0.603635, 0.674823, 1)
theme_override_fonts/font = ExtResource("19_81xum")
theme_override_font_sizes/font_size = 17
text = "specalna oferta tylko dla ciebie! nie przegap. "
autowrap_mode = 2

[node name="Label" type="Label" parent="description_box"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 14.0
offset_top = -202.0
offset_right = 15.0
offset_bottom = -171.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.866824, 0.703101, 0.757224, 1)
theme_override_fonts/font = ExtResource("19_81xum")
theme_override_font_sizes/font_size = 22
text = "Specjalna oferta"

[node name="CloseItemBox" type="TextureButton" parent="."]
modulate = Color(1, 0.189276, 0.947632, 1)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -33.0
offset_top = -256.0
offset_right = 38.0
offset_bottom = -187.0
grow_horizontal = 0
grow_vertical = 0
rotation = 0.864777
texture_normal = ExtResource("18_oe84w")
ignore_texture_size = true
stretch_mode = 0

[connection signal="button_down" from="MarginContainer/Control/paidCurrency" to="MarginContainer/Control/paidCurrency" method="_on_button_down"]
[connection signal="pressed" from="MarginContainer/Control/paidCurrency" to="MarginContainer/Control/paidCurrency" method="_on_pressed"]
[connection signal="button_down" from="MarginContainer/Control/freeCurrency" to="MarginContainer/Control/freeCurrency" method="_on_button_down"]
[connection signal="pressed" from="MarginContainer/Control/freeCurrency" to="MarginContainer/Control/freeCurrency" method="_on_pressed"]
[connection signal="pressed" from="MarginContainer/Control/energy" to="MarginContainer/Control/energy" method="_on_pressed"]
[connection signal="pressed" from="MarginContainer/Control/gatcha" to="MarginContainer/Control/gatcha" method="_on_pressed"]
[connection signal="button_down" from="MarginContainer/Control/shop" to="MarginContainer/Control/shop" method="_on_button_down"]
[connection signal="button_up" from="MarginContainer/Control/shop" to="MarginContainer/Control/shop" method="_on_button_up"]
[connection signal="pressed" from="MarginContainer/Control/shop" to="MarginContainer/Control/shop" method="_on_pressed"]
[connection signal="pressed" from="MarginContainer/Control/gatchaAd" to="MarginContainer/Control/gatchaAd" method="_on_pressed"]
[connection signal="pressed" from="MarginContainer/Control/pig" to="MarginContainer/Control/pig" method="_on_pressed"]
[connection signal="pressed" from="MarginContainer/Control/achievements" to="MarginContainer/Control/achievements" method="_on_pressed"]
[connection signal="pressed" from="MarginContainer/Control/login" to="MarginContainer/Control/login" method="_on_pressed"]
[connection signal="pressed" from="MarginContainer/Control/dailies" to="MarginContainer/Control/dailies" method="_on_pressed"]
[connection signal="pressed" from="MarginContainer/Control/battlePass" to="MarginContainer/Control/battlePass" method="_on_pressed"]
[connection signal="pressed" from="MarginContainer/Control/onlineLeaderboard" to="MarginContainer/Control/onlineLeaderboard" method="_on_pressed"]
[connection signal="pressed" from="MarginContainer/Control/specialOffer" to="MarginContainer/Control/specialOffer" method="_on_pressed"]
[connection signal="pressed" from="MarginContainer/Control/skinCollection" to="MarginContainer/Control/skinCollection" method="_on_pressed"]
[connection signal="pressed" from="MarginContainer/Control/catCollection" to="MarginContainer/Control/catCollection" method="_on_pressed"]
[connection signal="pressed" from="CloseItemBox" to="." method="_on_close_item_box_pressed"]
